--- a/index.html
+++ b/index.html
@@ -26,17 +26,26 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <h1>🎬 PhimHay</h1>
+                    <h1>
+                        <a href="#" data-page="home" id="logoLink">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
+                                style="display: inline-block; vertical-align: middle; margin-right: 8px;">
+                                <path d="M4 20h14v-8h2L12 3 4 11v9zm8-10.5l6 6V18h-4v-4H10v4H6v-7.5l6-6z" />
+                            </svg>
+                            PhimHay
+                        </a>
+                    </h1>
                 </div>
 
-                <nav class="nav">
-                    <a href="#" class="nav-link active" data-page="home">Trang chủ</a>
-                    <a href="#phim-bo" class="nav-link" data-category="phim-bo">Phim bộ</a>
-                    <a href="#phim-le" class="nav-link" data-category="phim-le">Phim lẻ</a>
-                    <a href="#phim-chieu-rap" class="nav-link" data-category="phim-chieu-rap">Phim chiếu rạp</a>
-                </nav>
+                <!-- Mobile Search Toggle -->
+                <button class="mobile-search-toggle" id="mobileSearchToggle" aria-label="Toggle search">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <path d="m21 21-4.35-4.35"></path>
+                    </svg>
+                </button>
 
-                <div class="search-box">
+                <div class="search-box" id="searchBox">
                     <input type="text" id="searchInput" placeholder="Tìm kiếm phim..." class="search-input">
                     <button class="search-btn" id="searchBtn">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -45,6 +54,28 @@
                             <path d="m21 21-4.35-4.35"></path>
                         </svg>
                     </button>
+                </div>
+
+                <nav class="nav">
+                    <a href="#phim-bo" class="nav-link" data-category="phim-bo">Phim bộ</a>
+                    <a href="#phim-le" class="nav-link" data-category="phim-le">Phim lẻ</a>
+                </nav>
+
+                <!-- Auth Buttons -->
+                <div class="auth-buttons">
+                    <button class="auth-btn" id="loginBtn" style="display: none;">Đăng nhập</button>
+                    <div class="user-profile" id="userProfile" style="display: none;">
+                        <button class="user-btn" id="userBtn">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path
+                                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" />
+                            </svg>
+                            <span id="userEmail"></span>
+                        </button>
+                        <div class="user-dropdown" id="userDropdown">
+                            <button class="dropdown-item" id="logoutBtn">Đăng xuất</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -71,6 +102,13 @@
         <!-- Dots Indicator -->
         <div class="hero-slider-dots" id="heroSliderDots">
             <!-- Dots will be inserted here by JavaScript -->
+        </div>
+    </section>
+
+    <!-- Continue Watching Section -->
+    <section class="continue-watching-section" id="continueWatchingSection" style="display: none;">
+        <div class="container continue-watching-container">
+            <!-- Continue watching content will be inserted here by JavaScript -->
         </div>
     </section>
 
@@ -217,6 +255,59 @@
         </svg>
     </button>
 
+    <!-- Auth Modals -->
+    <div class="auth-modal" id="loginModal">
+        <div class="auth-modal-content">
+            <div class="auth-modal-header">
+                <h2>Đăng nhập</h2>
+                <button class="auth-close" id="loginClose">&times;</button>
+            </div>
+            <form class="auth-form" id="loginForm">
+                <div class="form-group">
+                    <label for="loginEmail">Email</label>
+                    <input type="email" id="loginEmail" required placeholder="Nhập email của bạn">
+                </div>
+                <div class="form-group">
+                    <label for="loginPassword">Mật khẩu</label>
+                    <input type="password" id="loginPassword" required placeholder="Nhập mật khẩu">
+                </div>
+                <div class="error-message" id="loginError"></div>
+                <button type="submit" class="auth-submit-btn">Đăng nhập</button>
+                <p class="auth-switch">Chưa có tài khoản? <a href="#" id="showRegister">Đăng ký ngay</a></p>
+            </form>
+        </div>
+    </div>
+
+    <div class="auth-modal" id="registerModal">
+        <div class="auth-modal-content">
+            <div class="auth-modal-header">
+                <h2>Đăng ký</h2>
+                <button class="auth-close" id="registerClose">&times;</button>
+            </div>
+            <form class="auth-form" id="registerForm">
+                <div class="form-group">
+                    <label for="registerName">Tên hiển thị</label>
+                    <input type="text" id="registerName" placeholder="Nhập tên của bạn">
+                </div>
+                <div class="form-group">
+                    <label for="registerEmail">Email</label>
+                    <input type="email" id="registerEmail" required placeholder="Nhập email của bạn">
+                </div>
+                <div class="form-group">
+                    <label for="registerPassword">Mật khẩu</label>
+                    <input type="password" id="registerPassword" required placeholder="Tối thiểu 6 ký tự">
+                </div>
+                <div class="form-group">
+                    <label for="registerConfirmPassword">Xác nhận mật khẩu</label>
+                    <input type="password" id="registerConfirmPassword" required placeholder="Nhập lại mật khẩu">
+                </div>
+                <div class="error-message" id="registerError"></div>
+                <button type="submit" class="auth-submit-btn">Đăng ký</button>
+                <p class="auth-switch">Đã có tài khoản? <a href="#" id="showLogin">Đăng nhập</a></p>
+            </form>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <!-- HLS.js for m3u8 support -->
     <script src="https://cdn.jsdelivr.net/npm/hls.js@1.4.12"></script>
@@ -226,7 +317,10 @@
     <script src="js/api.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/hero-slider.js"></script>
-    <script src="js/player.js"></script>
+    <script type="module" src="js/player.js"></script>
+    <script type="module" src="js/auth.js"></script>
+    <script type="module" src="js/auth-ui.js"></script>
+    <script type="module" src="js/continue-watching-ui.js"></script>
     <script src="js/app.js"></script>
 </body>
 
